# JARVICE

./: .gitignore  README.md
.cursor/rules/: root-fix-role.mdc
creovix-agent-desktop/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
creovix-agent-desktop/automation/: package-lock.json  package.json  test-payload.json
creovix-agent-desktop/automation/src/: csv.ts  run.ts  security.ts  steps.ts  template.ts  types.ts
creovix-agent-desktop/database/: db.ts  seed.ts
creovix-agent-desktop/sample-data/: bing-test-run.csv  bing-test.csv
creovix-agent-desktop/scripts/: README.md  package-release.mjs  prepare-runtime.mjs  read-csv-node.mjs  runner.js  seed-bing-scenario.js
creovix-agent-desktop/src/: App.tsx  main.tsx  styles.css
creovix-agent-desktop/src-tauri/: Cargo.toml  tauri.conf.json
creovix-agent-desktop/src-tauri/capabilities/: default.json
creovix-agent-desktop/src-tauri/icons/: icon.icns
creovix-agent-desktop/src-tauri/src/: lib.rs  main.rs
creovix-agent-desktop/src/components/: ConfirmModal.tsx  StepEditor.tsx
creovix-agent-desktop/src/context/: ConfirmationContext.tsx
creovix-agent-desktop/src/hooks/: useDatabase.ts  useScenario.ts
creovix-agent-desktop/src/pages/: RunLogPage.tsx  ScenarioEditorPage.tsx  ScenariosPage.tsx
creovix-agent-desktop/src/services/: confirmationBridge.ts  runService.ts  runner.ts
creovix-agent-desktop/src/types/: index.ts
creovix-agent-desktop/src/utils/: csv.ts  security.ts  variables.ts
release/: Запуск-JARVICE.bat  КАК-ЗАПУСКАТЬ.txt
