[package]
name = "creovix-agent-desktop"
version = "0.1.0"
description = "Creovix Agent Desktop"
authors = ["Creovix"]
edition = "2021"

[lib]
name = "creovix_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
